--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 .trunk/
+data/scoreboard.dat
+data/usedStats.list
+secret_stat.json
